--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,14 @@
 	"license": "GPL-2.0+",
 	"require": {
 		"geoip/geoip": "1.17"
+	},
+	"require-dev": {
+		"jakub-onderka/php-parallel-lint": "0.9.2",
+		"jakub-onderka/php-console-highlighter": "0.3.2"
+	},
+	"scripts": {
+		"test": [
+			"parallel-lint . --exclude vendor"
+		]
 	}
 }
