--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	},
 	"scripts": {
 		"test": [
-			"parallel-lint . --exclude vendor",
+			"parallel-lint . --exclude vendor --exclude node_modules",
 			"minus-x check ."
 		],
 		"fix": [
