--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "mediawiki/securesessionsw",
 	"type": "mediawiki-extension",
 	"description": "Makes user sessions and session authentication more secure",
-	"license": "GPL-2.0+",
+	"license": "GPL-2.0-or-later",
 	"require": {
 		"geoip/geoip": "1.17"
 	},
